.jjconflict-side-0/crates/linnet/src/half_edge/snapshots/linnet__half_edge__tests__three_loop_dot.snap
---
source: src/half_edge/tests.rs
expression: graph.base_dot()
---
digraph {
  node	 [shape=circle,height=0.1,label=""];
  overlap = "scale";
  layout = "neato";
  start=2;
  0:0:s	-> 1:1:s	 [id=0 dir=none  color="red:blue;0.5"];
  1:2:s	-> 0:3:s	 [id=1 dir=none  color="red:blue;0.5"];
  0:4:s	-> 1:5:s	 [id=2 dir=none  color="red:blue;0.5"];
  1:6:s	-> 2:7:s	 [id=3 dir=none  color="red:blue;0.5"];
  2:8:s	-> 3:9:s	 [id=4 dir=none  color="red:blue;0.5"];
  3:10:s	-> 0:11:s	 [id=5 dir=none  color="red:blue;0.5"];
}
